<resources>
    <!-- NOMBRE DE LA APP -->
    <string name="app_name">Food Fit</string>

    <!-- MI WEB CLIENT ID -->
    <string name="default_web_client_id">849686616005-4d4rm9c9fq2vv2f5clafcpb7e5osu7rt.apps.googleusercontent.com</string>

    <!-- SPLASH SCREEN -->
    <string name="splash_iv_logo">Logo de la aplicación</string>

    <!-- LOGIN -->
    <string name="login_iv_logoFoodFit">Imagén del icono de la app</string>
    <string name="login_tv_textLogin">Iniciar sesión</string>
    <string name="login_et_correoElectronico">Correo electrónico</string>
    <string name="login_et_contrasenya">Contraseña</string>
    <string name="login_bt_login">Iniciar sesión</string>
    <string name="login_tv_register">¿No tienes cuenta de Food Fit?</string>
    <string name="login_tv_registerNow">Regístrate ahora</string>
    <string name="login_with_google">Continuar con Google</string>

    <!-- REGISTER -->
    <string name="register_iv_logoFoodFit">Logo de FoodFit</string>
    <string name="register_tv_textRegister">Registro</string>
    <string name="register_et_nombre">Nombre completo</string>
    <string name="register_et_correoElectronico">Correo electrónico</string>
    <string name="register_et_contrasenya">Contraseña</string>
    <string name="register_et_confirmarContrasenya">Confirmar contraseña</string>
    <string name="register_bt_registrarse">Registrarse</string>
    <string name="register_tv_yaTienesCuenta">¿Ya tienes cuenta?</string>
    <string name="register_tv_iniciaSesion">Iniciar sesión</string>

    <!-- TOOLBAR -->
    <string name="toolbar_ib_menu">Abrir menú de navegación</string>
    <string name="toolbar_ib_busqueda">Logo de FoodFit</string>

    <!-- MENÚ HOME -->
    <string name="menuHome">Home</string>
    <string name="menuHomeDesayuno">Desayuno</string>
    <string name="menuHomeComida">Comida</string>
    <string name="menuHomeCena">Cena</string>
    <string name="menuHomeSnack">Snack</string>
    <string name="menuHomeCrear">Mis Platillos</string>
    <string name="menuHomeFavoritos">Favoritos</string>
    <string name="menuHomeMenu">Menú Comida</string>
    <string name="menuHomePerfil">Perfil</string>

    <!-- MENÚ LATERAL HOME -->
    <string name="menuTvHeaderTvPerfil">Usuario</string>
    <string name="menuIwHeaderIbPerfil">Imagen del usuario</string>

    <!-- PROFILE -->
    <string name="profileBtnChangeTheme">Icono en el que te indica al modo a que vas a cambiar</string>
    <string name="profileBtnLogout">Cerrar sesión</string>
    <string name="profileTvFavoritesCount">0</string>
    <string name="profileTvFavoritesLabel">Platillos favoritos</string>

    <!-- EDIT PROFILE -->
    <string name="editProfileIvAvatar">Imagen del usuario</string>
    <string name="editProfileFabChangePhoto">Icono de cámara</string>
    <string name="editProfileNameLayout">Nuevo nombre</string>
    <string name="editProfileBtnCancel">Cancelar</string>
    <string name="editProfileBtnSave">Guardar</string>
    <string name="editProfileCurrentPasswordLayout">Contraseña actual</string>
    <string name="editProfileRepeatPasswordLayout">Repite nueva contraseña</string>
    <string name="editProfileNewPasswordLayout">Nueva contraseña</string>

    <!-- HOME -->
    <string name="homeIcon">Icono de Home</string>

    <!-- BREAKFAST -->
    <string name="breakfastIcon">Icono de desayuno</string>

    <!-- LUNCH -->
    <string name="lunchIcon">Icono de comida</string>

    <!-- DINNER -->
    <string name="dinnerIcon">Icono de cena</string>

    <!-- SNACK -->
    <string name="snackIcon">Icono de snack</string>

    <!-- FAVORITE -->
    <string name="favoriteIcon">Icono de favorito</string>

    <!-- FOOD PLATE INFO -->
    <string name="foodPlateInfoIvIcon">Icono / Imagén del platillo de comida</string>
    <string name="foodPlateInfoIngredientsTitle">Ingredientes</string>
    <string name="foodPlateInfoCategory">Categoría</string>
    <string name="foodPlateInfoPreparationTitle">Preparación</string>
    <string name="foodPlateInfoDetailFoodTitle">Detalles Nutricionales</string>
    <string name="foodPlateInfoShareButton">Compartir platillo</string>
    <string name="foodPlateInfoCommentsTitle">Comentarios</string>
    <string name="foodPlateInfoCommentInput">Escribe tu comentario</string>
    <string name="foodPlateInfoSubmitCommentButton">Comentar</string>
    <string name="foodPlateInfoBtnMostrarMasComentarios">Mostrar más comentarios</string>
    <string name="foodPlateInfoCant">Cant</string>
    <string name="foodPlateInfoIngredient">Ingrediente</string>
    <string name="foodPlateInfoUnd">Und</string>
    <string name="foodPlateInfoPrecio">Precio</string>
    <string name="foodPlateInfoKcal">Kcal</string>
    <string name="foodPlateInfoGr">Gr</string>
    <string name="foodPlateInfoCarb">Carb</string>
    <string name="foodPlateInfoFib">Fib</string>
    <string name="foodPlateInfoProt">Prot</string>

    <!-- ITEM FOOD-->
    <string name="itemFoodImage">Imagén del platillo</string>
    <string name="itemFoodTitle">Nombre del platillo</string>
    <string name="itemFoodFavoriteIcon">Icono de favorito</string>
    <string name="itemFoodSubtitle">Categoría del platillo</string>

    <!-- ITEM PREPARATION -->
    <string name="itemPreparationText">1. Lava los tomates.</string>

    <!-- ITEM INGREDIENT -->
    <string name="itemIngredientQuantity">1</string>
    <string name="itemIngredientName">Tomate</string>
    <string name="itemIngredientUnit">gr</string>
    <string name="itemIngredientPrice">0.50€</string>

    <!-- ITEM DETAIL INGREDIENT -->
    <string name="itemDetailCalories">25</string>
    <string name="itemDetailFat">0.2</string>
    <string name="itemDetailCarbs">5</string>
    <string name="itemDetailFiber">1.5</string>
    <string name="itemDetailProtein">1</string>

    <!-- ITEM COMMENT -->
    <string name="itemCommentUsername">Usuario</string>
    <string name="itemCommentText">Este platillo es delicioso, me encantó!</string>
    <string name="itemCommentTimestamp">Hace 2 horas</string>
    <string name="itemCommentDeleteButton">Imagen butón para eliminar comentario</string>

    <!-- MY FOOD PLATE -->
    <string name="myFoodPlateIconAdd">Icono de añadir</string>
    <string name="myFoodPlateBtnCreateFood">Crear</string>
    <string name="myFoodPlateBtnDeleteFood">Eliminar</string>

    <!-- CREATE FOOD PLATE -->
    <string name="createFoodPlateTilNameIngredient">Nombre del Ingrediente</string>
    <string name="createFoodPlateCantidad">Cantidad</string>
    <string name="createFoodPlateUnidad">Unidad</string>
    <string name="createFoodPlateNewPaso">Nuevo paso</string>
    <string name="createFoodPlateTilPriceIngredient">Precio del ingrediente</string>

    <!-- SEARCH DIALOG -->
    <string name="searchInputLayout">Escribe un ingrediente</string>
    <string name="searchEt">Campo para escribir el nombre de un ingrediente</string>

</resources>