<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/itemFoodFit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <!-- Imagen arriba -->
        <ImageView
            android:id="@+id/itemFoodImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/itemFoodImage"
            android:scaleType="centerCrop" />

        <!-- Texto título del platilo + icono favorito -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemFoodTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/itemFoodTitle"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:textColor="?attr/colorOnSurface" />

            <ImageView
                android:id="@+id/itemFoodFavoriteIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/itemFoodFavoriteIcon"
                android:focusable="true"
                android:clickable="true"
                android:src="@drawable/ic_favorite"
                app:tint="?attr/colorPrimary" />
        </LinearLayout>

        <!-- Texto de la categoría del platillo -->
        <TextView
            android:id="@+id/itemFoodSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/itemFoodSubtitle"
            android:textAppearance="?attr/textAppearanceBodySmall"
            android:textColor="?attr/colorOnSurfaceVariant" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
