<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.MaterialToolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/colorPrimaryContainer"
    android:elevation="4dp"
    app:contentInsetEnd="0dp"
    app:contentInsetStart="0dp"
    app:contentInsetStartWithNavigation="0dp"
    app:titleTextColor="?attr/colorOnPrimaryContainer">

    <!-- Contenedor para íconos -->
    <LinearLayout
        android:id="@+id/toolbarLyIconos"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <!-- Ícono de menú -->
        <ImageButton
            android:id="@+id/toolbarIbMenu"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/toolbar_ib_menu"
            android:src="@drawable/ic_menu"
            app:tint="?attr/colorOnPrimaryContainer" />

        <!-- Ícono de búsqueda -->
        <ImageButton
            android:id="@+id/toolbarIbBusqueda"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/toolbar_ib_busqueda"
            android:src="@drawable/ic_search"
            app:tint="?attr/colorOnPrimaryContainer" />
    </LinearLayout>

    <!-- Título centrado -->
    <TextView
        android:id="@+id/toolbarTvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textSize="20sp"
        android:textStyle="bold" />
</com.google.android.material.appbar.MaterialToolbar>